--- a/frontend/src/assets/tailwind.css
+++ b/frontend/src/assets/tailwind.css
@@ -11,4 +11,14 @@
   .btn-blue:hover {
     @apply bg-blue-700 transition duration-100 ease-in-out;
   }
+
+  .achievement-card {
+    height: auto;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 33.3333%;
+    flex-basis: 200px;
+    display: flex;
+  }
+
 }
