--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -629,6 +629,14 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.achievement-card {
+  height: auto;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 33.3333%;
+  display: flex;
+}
+
 .space-y-0 > :not(template) ~ :not(template) {
   --space-y-reverse: 0;
   margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
